--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Challenge 1\Scripts\PlayerControllerX.cs" />
      <Compile Include="Assets\Scripts\FollowPlayer.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\SpawnManager.cs" />
      <None Include="Assets\Course Library\_Source_Files\_LICENSE.txt" />
  <Reference Include="UnityEngine.Purchasing">
  <HintPath>/Users/game3-18/Desktop/Create with Code/Prototype1/Library/ScriptAssemblies/UnityEngine.Purchasing.dll</HintPath>
